--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-copy": "0.0.2",
     "gulp-cssbeautify": "^0.1.3",
     "gulp-csscomb": "^3.0.6",
+    "gulp-excel2json": "^1.0.5",
     "gulp-sass": "^2.1.0",
     "run-sequence": "^1.1.4"
   }
